--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,13 +26,21 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           
+      - name: Create virtual environment
+        run: |
+          uv venv
+          source .venv/bin/activate
+          echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
+          
       - name: Install dependencies
         run: |
+          source .venv/bin/activate
           uv pip install --upgrade pip
           uv pip install -e ".[dev]"
           
       - name: Run tests
         run: |
+          source .venv/bin/activate
           pytest tests/ --cov=pysumoapi --cov-report=xml
           
       - name: Upload coverage to Codecov
