--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,23 +23,15 @@ jobs:
           
       - name: Install dependencies
         run: |
-          uv pip install --upgrade pip
-          uv pip install build twine
+          make setup
           
       - name: Build package
         run: |
-          python -m build
-          
-      - name: Check package
-        run: |
-          twine check dist/*
+          make build
           
       - name: Publish to PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          twine upload dist/*
+          make publish
           
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
