--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,32 +26,15 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           
-      - name: Create virtual environment
+      - name: Create virtual environment & Install dependencies
         run: |
-          uv venv
-          source .venv/bin/activate
-          echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
-          
-      - name: Install dependencies
-        run: |
-          source .venv/bin/activate
-          uv pip install --upgrade pip
-          uv pip install -e ".[dev]"
+          make setup
           
       - name: Run tests
         run: |
-          source .venv/bin/activate
-          pytest tests/ --cov=pysumoapi --cov-report=xml
+          make test
           
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
-          file: ./coverage.xml
-          fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unittests
-          name: codecov-umbrella
-          yml: ./codecov.yml
-          function: 100
-          after_script: |
-            echo "Coverage upload complete" 
