--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,21 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to publish (e.g., 0.1.3)'
+        required: true
+        type: string
+      release_type:
+        description: 'Type of release'
+        required: true
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+        default: 'patch'
 
 jobs:
   build-and-publish:
@@ -24,6 +39,17 @@ jobs:
       - name: Install dependencies
         run: |
           make setup
+          uv pip install -e ".[dev]"
+          
+      - name: Set version (manual trigger only)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          make version-set VERSION=${{ github.event.inputs.version }}
+          
+      - name: Bump version (manual trigger only)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          make version-bump TYPE=${{ github.event.inputs.release_type }}
           
       - name: Build package
         run: |
@@ -34,6 +60,18 @@ jobs:
           PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           make publish
+          
+      - name: Create git tag (manual trigger only)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          VERSION=$(make version)
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add pyproject.toml CHANGELOG.md
+          git commit -m "Release $VERSION"
+          git tag -a "v$VERSION" -m "Release v$VERSION"
+          git push origin main
+          git push origin "v$VERSION"
           
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
