--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,10 @@ on:
           - major
         default: 'patch'
 
+# Add permissions for the GitHub Actions workflow
+permissions:
+  contents: write
+
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
@@ -46,11 +50,6 @@ jobs:
         run: |
           make version-set VERSION=${{ github.event.inputs.version }}
           
-      - name: Bump version (manual trigger only)
-        if: github.event_name == 'workflow_dispatch'
-        run: |
-          make version-bump TYPE=${{ github.event.inputs.release_type }}
-          
       - name: Build package
         run: |
           make build
@@ -61,20 +60,9 @@ jobs:
         run: |
           make publish
           
-      - name: Create git tag (manual trigger only)
-        if: github.event_name == 'workflow_dispatch'
-        run: |
-          VERSION=$(make version)
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add pyproject.toml CHANGELOG.md
-          git commit -m "Release $VERSION"
-          git tag -a "v$VERSION" -m "Release v$VERSION"
-          git push origin main
-          git push origin "v$VERSION"
-          
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
+        if: github.event_name == 'push'
         with:
           name: Release ${{ github.ref_name }}
           body: |
