--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,10 @@ dev = [
     "black>=24.2.0",
     "build>=1.1.1",
     "twine>=5.0.0",
+    "sphinx>=7.2.0",
+    "sphinx-rtd-theme>=2.0.0",
+    "sphinx-autodoc-typehints>=1.25.0",
+    "myst-parser>=2.0.0",
 ]
 
 [project.urls]
