Enhance SumoClient with automatic retries and update dependencies
- Added `httpx-retries` dependency to enable automatic retries for failed requests.
- Updated `SumoClient` to support customizable timeout and retry configurations.
- Modified example scripts to demonstrate new client initialization options and improved error handling.
- Updated README to reflect changes in installation instructions and new features.
- Adjusted tests to ensure compatibility with the updated client and added new test cases for enhanced functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 ]
 dependencies = [
     "httpx>=0.24.0",
+    "httpx-retries>=0.3.1",
     "pydantic>=2.0.0",
     "requests>=2.32.3",
     "certifi>=2024.2.0",
